--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ platformdirs==4.2.0
 prompt-toolkit==3.0.43
 psutil==5.9.8
 pure-eval==0.2.2
+pyarrow==15.0.0
 Pygments==2.17.2
 python-dateutil==2.8.2
 pytz==2024.1
